# trainingProject

./: CMakeLists.txt  Dockerfile  main.cpp  run.sh
.github/workflows/: action.yaml  build.yml
src/: Client.cpp  Client.hpp  ISender.hpp  Sender.cpp  Sender.hpp  Server.cpp  Server.hpp  ThreadSafeQueue.hpp  main.cpp
tests/: main.cpp
